# hopper-bench

./: AUDIT.md  Cargo.toml  METHODOLOGY.md  README.md  ROUTER_CONTRACT.md  compare-framework-vaults.ps1  cu_baselines.toml  measure.ps1  measure.sh  run-bench-docker.ps1  run-bench-docker.sh
anchor-vault/: Cargo.toml
anchor-vault/src/: lib.rs
docker/: docker-compose.yml
framework-vault-bench/: Cargo.toml
framework-vault-bench/src/: main.rs
hopper-bench/: Cargo.toml
hopper-bench/src/: lib.rs
lazy-dispatch-bench/: Cargo.toml
lazy-dispatch-bench/src/: main.rs
lazy-dispatch-vault/: Cargo.toml  README.md
lazy-dispatch-vault/src/: lib.rs
mock-amm/: Cargo.toml
mock-amm/src/: lib.rs
pinocchio-router/: Cargo.toml
pinocchio-router/src/: lib.rs
pinocchio-vault/: Cargo.toml
pinocchio-vault/src/: lib.rs
primitive-bench/: Cargo.toml
primitive-bench/src/: main.rs
quasar-router/: Cargo.toml  README.md
quasar-router/src/: lib.rs
results/framework-vaults-2026-05-17/: vault-framework-comparison.csv  vault-framework-comparison.json
results/framework-vaults-2026-05-18-size-opt/: vault-framework-comparison.csv  vault-framework-comparison.json
results/framework-vaults-2026-07-02-post-i10/: vault-framework-comparison.csv  vault-framework-comparison.json
router-bench/: Cargo.toml
router-bench/src/: main.rs
