[workspace]
exclude = ["anchor-vault", "docker"]
members = [
    "hopper-bench",
    "framework-vault-bench",
    "lazy-dispatch-bench",
    "lazy-dispatch-vault",
    "mock-amm",
    "pinocchio-router",
    "pinocchio-vault",
    "router-bench",
]
resolver = "2"

[workspace.dependencies]
five8_const = "0.1"
pinocchio = { version = "0.10", features = ["cpi", "copy"] }
pinocchio-system = "0.5"
pinocchio-token = "0.5"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_arch, values("bpf"))',
] }

# For `hopper profile elf --inlines` attribution builds, temporarily add:
#   [profile.release]
#   debug = 2
# NOTE: platform-tools' -g measurably CHANGES deploy codegen (+152 B seen),
# so NEVER leave it on for CU/size measurement runs — measure debug=0.
