[package]
name = "framework-vault-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
five8_const = { workspace = true }
mollusk-svm = "0.10.3"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-account = "3.4.0"
solana-address = { version = "2.2.0", features = ["decode"] }
solana-instruction = { version = "3.1.0", features = ["bincode"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }