[package]
name = "hopper-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "CU benchmark program for Hopper framework primitives"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hopper = { path = "../../Hopper-Solana-Zero-copy-State-Framework", package = "hopper-framework", default-features = false, features = ["proc-macros"] }

[features]
default = ["hopper-native-backend"]
hopper-native-backend = ["hopper/hopper-native-backend"]
legacy-pinocchio-compat = ["hopper/legacy-pinocchio-compat"]
solana-program-backend = ["hopper/solana-program-backend"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
