[package]
name = "hopper-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "CU benchmark program for Hopper framework primitives"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hopper = { path = "../../Hopper-Solana-Zero-copy-State-Framework", package = "hopper-lang", default-features = false, features = ["proc-macros"] }

# The framework unified on the native backend (the old
# hopper-native-backend / legacy-pinocchio-compat / solana-program-backend
# selection features were removed upstream). The names are kept as local
# no-ops so existing command lines still parse; they no longer forward.
[features]
default = []
hopper-native-backend = []
legacy-pinocchio-compat = []
solana-program-backend = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
