[package]
name = "pinocchio-router"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Idiomatic Anza Pinocchio implementation of the router parity contract (ROUTER_CONTRACT.md v1). Raw-substrate baseline for the multi-hop router benchmark; executes 1-3 mock-amm swap hops with measured amount forwarding and a min-out safety gate."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
